--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- Navigation part  -->
-    <nav class="main-nav bg-dark">
+    <nav class="navbar main-nav bg-dark">
       <div class="left-nav">
         <ul class="nav-links">
           <li><a href="#">About-me</a></li>
@@ -57,7 +57,7 @@
         const about = document.querySelector('.about');
 
         // Add event listener
-        // oggle description
+        // toggle description
         about.addEventListener('click', () =>{
           if(description.style.display === 'none'){
             description.style.display = 'block';
