--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- Navigation part  -->
-    <nav class="navbar main-nav bg-dark">
+    <nav class="main-nav bg-dark">
       <div class="left-nav">
         <ul class="nav-links">
           <li><a href="#">About-me</a></li>
