completed the project , but still cant fix the responsiveness for mobile , will go and learn about it, I added new pages with different background images

--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,8 @@
       <div class="left-nav">
         <ul class="nav-links">
           <li><a href="./index.html">Home</a></li>
-          <li><a href="hubby.html">hubby</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="about.html">about</a></li>
+         
         </ul>
       </div>
       <div class="center">
@@ -41,10 +40,10 @@
     <!-- Navigation ends here  -->
     <main>
 
-      <section class="intro-text text-light">
+      <section class="intro-text text-light contact">
         <h1>omotosho kolawole</h1>
-        <button class="about btn btn-outline-light btn-lg">about me</button>
-        <h2 class="description">I'm a web developer from Lagos, Nigeria and i love to play football</b></h2>
+        <button class="about btn btn-outline-light btn-lg">contact me</button>
+        <h2 class="description">my social handle is @kolaTosho on twitter</b></h2>
       </section>
       <footer class="footer">
         <h3>CS50 is the best</h3>
