--- a/hubby.html
+++ b/hubby.html
@@ -12,7 +12,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"></script>
     <link href="styles.css" rel="stylesheet" />
-    <title>My Webpage</title>
+    <title>Hubby</title>
   </head>
   <body>
     <!-- Navigation part  -->
@@ -21,8 +21,7 @@
         <ul class="nav-links">
           <li><a href="./index.html">Home</a></li>
           <li><a href="hubby.html">hubby</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="about.html">about</a></li>
+         
         </ul>
       </div>
       <div class="center">
@@ -41,10 +40,10 @@
     <!-- Navigation ends here  -->
     <main>
 
-      <section class="intro-text text-light">
+      <section class="intro-text text-light hubby">
         <h1>omotosho kolawole</h1>
-        <button class="about btn btn-outline-light btn-lg">about me</button>
-        <h2 class="description">I'm a web developer from Lagos, Nigeria and i love to play football</b></h2>
+        <button class="about btn btn-outline-light btn-lg">hubby</button>
+        <h2 class="description"> i love to play football and table tennis</b></h2>
       </section>
       <footer class="footer">
         <h3>CS50 is the best</h3>
